@@ -5,3 +5,6 @@
 @PVER@-dbg binary: hardening-no-fortify-functions
 
 @PVER@-dbg binary: command-with-path-in-maintainer-script
+
+# pyexpat.c contains expat error messages that lintian mis-attributes to embedding
+@PVER@-dbg binary: embedded-library expat [usr/bin/@PVER@d]
